4/11/11 added circuit choice property to model and control panel
4/11/11 moved enums to top-level model class files
4/11/11 added model property for dielectric charge representation
4/11/11 started to flesh out Multi-Cap control panel
4/11/11 added model properties for charge and e-field visibility
4/5/11 tested by NP, no problems found, OK to proceed
# 1.00.01 (50277) Mar 31, 2011
3/31/11 sanity check: major model changes to accommodate multiple capacitors, should be functionally identical to 1.00.00
3/31/11 rename dev ModelValuesPanel to DielectricModelValuesPanel, since it is specific to the single-capacitor circuit
3/31/11 doc ICircuit and subclasses
3/31/11 simplify implementation of BatteryCapacitorCircuit.updateVoltages
3/31/11 encapsulate getMax* calls in DielectricModel, pass ranges and reference magnitudes into view nodes
3/31/11 convert current amplitude to an observable Property<Double>
3/31/11 MAJOR changes to the model in preparation for supporting multiple capacitors, moved lots of stuff from BatteryCapacitorCircuit to Capacitor
3/31/11 generalize, remove many dependencies on BatteryCapacitorCircuit by creating interface ICircuit
3/28/11 strip leading whitespace from all source files, so that formatting won't obscure future changes
3/28/11 restore WorldLocationProperty, this bit is useful
3/28/11 back out all of the "public final" property stuff I did, it started to become an inconsistent mess (revert to [49849] 3/16/11)
3/28/11 make battery's observable properties "public final"
3/28/11 make E-field meter's observable properties "public final"
3/28/11 make voltmeter's observable properties "public final"
3/28/11 make bar meter's observable properties "public final"
3/28/11 add WorldLocationProperty, a 3D location constrained to the bounds of the World
3/16/11 enable Multiple Capacitors tab, make it the default for dev
3/9/11 add minor tick marks to dielectric constant slider
2/28/11 migrate Dimension3D to phetcommon.math