@@ -1,3 +1,4 @@
+4/11/11 add meters to Multi-Cap canvas
 4/11/11 added circuit choice property to model and control panel
 4/11/11 moved enums to top-level model class files
 4/11/11 added model property for dielectric charge representation
